--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -267,11 +267,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsTableViewCell" id="mXf-rt-AUV" customClass="NewsTableViewCell" customModule="VKapp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="182"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsTableViewCell" rowHeight="1000" id="mXf-rt-AUV" customClass="NewsTableViewCell" customModule="VKapp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="1000"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mXf-rt-AUV" id="L07-A9-Pks">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="182"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AzI-ik-2dM" customClass="AvatarView" customModule="VKapp" customModuleProvider="target">
@@ -313,7 +313,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N2q-Xw-KAc" customClass="LikeButton" customModule="VKapp" customModuleProvider="target">
-                                                    <rect key="frame" x="30" y="141" width="50" height="20"/>
+                                                    <rect key="frame" x="30" y="959" width="50" height="20"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="7RI-w7-BjW"/>
@@ -321,7 +321,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HuF-1x-dNj">
-                                                    <rect key="frame" x="110" y="142" width="30" height="20"/>
+                                                    <rect key="frame" x="110" y="960" width="30" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="RRV-Gc-BsH"/>
                                                         <constraint firstAttribute="height" constant="20" id="q2L-uI-zAq"/>
@@ -329,7 +329,7 @@
                                                     <state key="normal" image="text.bubble" catalog="system"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yng-yy-g9X">
-                                                    <rect key="frame" x="170" y="141" width="20" height="20"/>
+                                                    <rect key="frame" x="170" y="959" width="20" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="20" id="bSa-LU-FMt"/>
                                                         <constraint firstAttribute="height" constant="20" id="fIc-EK-bJ9"/>
@@ -337,16 +337,22 @@
                                                     <state key="normal" image="arrowshape.turn.up.right" catalog="system"/>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uhh-TW-k8n">
-                                                    <rect key="frame" x="7" y="110.5" width="400" height="0.5"/>
+                                                    <rect key="frame" x="7" y="110.5" width="400" height="348.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="400" id="kqO-UA-I85"/>
                                                     </constraints>
                                                 </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="94F-pP-kKq" customClass="TestView" customModule="VKapp" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="469" width="374" height="480"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="N2q-Xw-KAc" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leadingMargin" constant="10" id="4oo-Oz-Pwk"/>
                                                 <constraint firstItem="P4C-NC-edk" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leading" constant="10" id="6qf-Dk-xnp"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="94F-pP-kKq" secondAttribute="trailing" id="7N5-dd-uRe"/>
                                                 <constraint firstItem="Qos-GS-drq" firstAttribute="leading" secondItem="AzI-ik-2dM" secondAttribute="trailing" constant="10" id="Bkc-dI-ggU"/>
+                                                <constraint firstItem="yng-yy-g9X" firstAttribute="top" secondItem="94F-pP-kKq" secondAttribute="bottom" constant="10" id="BoA-VL-Bre"/>
                                                 <constraint firstItem="P4C-NC-edk" firstAttribute="top" secondItem="AzI-ik-2dM" secondAttribute="bottom" constant="20" id="GfH-90-Vwu"/>
                                                 <constraint firstAttribute="trailing" secondItem="P4C-NC-edk" secondAttribute="trailing" constant="10" id="Jaq-wK-Zn2"/>
                                                 <constraint firstItem="HuF-1x-dNj" firstAttribute="leading" secondItem="N2q-Xw-KAc" secondAttribute="trailing" constant="30" id="L7C-KT-bVD"/>
@@ -359,8 +365,10 @@
                                                 <constraint firstItem="Uhh-TW-k8n" firstAttribute="centerX" secondItem="L07-A9-Pks" secondAttribute="centerX" id="dgL-eA-Raf"/>
                                                 <constraint firstAttribute="bottom" secondItem="HuF-1x-dNj" secondAttribute="bottom" constant="20" id="fDH-tp-TBX"/>
                                                 <constraint firstItem="LzE-3n-iWL" firstAttribute="top" secondItem="Qos-GS-drq" secondAttribute="bottom" constant="5" id="g54-Zz-zsu"/>
+                                                <constraint firstItem="94F-pP-kKq" firstAttribute="top" secondItem="Uhh-TW-k8n" secondAttribute="bottom" constant="10" id="gGi-gr-tZH"/>
                                                 <constraint firstItem="AzI-ik-2dM" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leading" constant="10" id="lZj-OB-IQt"/>
-                                                <constraint firstItem="N2q-Xw-KAc" firstAttribute="top" secondItem="Uhh-TW-k8n" secondAttribute="bottom" priority="999" constant="30" id="wGh-Vu-B4a"/>
+                                                <constraint firstItem="94F-pP-kKq" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leadingMargin" id="vBt-M2-yVX"/>
+                                                <constraint firstItem="N2q-Xw-KAc" firstAttribute="top" secondItem="Uhh-TW-k8n" secondAttribute="bottom" constant="500" id="wGh-Vu-B4a"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="N2q-Xw-KAc" secondAttribute="bottom" constant="10" id="yYA-J9-mL4"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -369,6 +377,7 @@
                                             <outlet property="newsImage" destination="Uhh-TW-k8n" id="enm-hb-p9F"/>
                                             <outlet property="newsSourseImage" destination="AzI-ik-2dM" id="7xs-cT-iaM"/>
                                             <outlet property="newsSourseLabel" destination="Qos-GS-drq" id="1Gc-Vq-wap"/>
+                                            <outlet property="newsTestView" destination="94F-pP-kKq" id="Q7R-Zc-IyT"/>
                                             <outlet property="newsTextLabel" destination="P4C-NC-edk" id="3wA-LZ-kTX"/>
                                         </connections>
                                     </tableViewCell>
@@ -576,6 +585,21 @@
                 <exit id="YOL-Pk-LrR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2502" y="1663"/>
+        </scene>
+        <!--Test View Controller-->
+        <scene sceneID="6Vm-rD-PN6">
+            <objects>
+                <viewController id="2yr-WD-NsZ" customClass="TestViewController" customModule="VKapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NhC-kU-fg5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="pVb-bU-V7I"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LfH-xN-AAm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5074" y="2494"/>
         </scene>
     </scenes>
     <resources>
