--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -267,11 +267,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsTableViewCell" rowHeight="1000" id="mXf-rt-AUV" customClass="NewsTableViewCell" customModule="VKapp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="1000"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsTableViewCell" rowHeight="500" id="mXf-rt-AUV" customClass="NewsTableViewCell" customModule="VKapp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="500"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mXf-rt-AUV" id="L07-A9-Pks">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AzI-ik-2dM" customClass="AvatarView" customModule="VKapp" customModuleProvider="target">
@@ -307,21 +307,20 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="NewsText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P4C-NC-edk">
-                                                    <rect key="frame" x="10" y="80" width="394" height="20.5"/>
+                                                    <rect key="frame" x="10" y="80" width="394" height="0.0"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N2q-Xw-KAc" customClass="LikeButton" customModule="VKapp" customModuleProvider="target">
-                                                    <rect key="frame" x="30" y="959" width="50" height="20"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <rect key="frame" x="30" y="459" width="50" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="7RI-w7-BjW"/>
                                                         <constraint firstAttribute="width" constant="50" id="xei-9r-7Og"/>
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HuF-1x-dNj">
-                                                    <rect key="frame" x="110" y="960" width="30" height="20"/>
+                                                    <rect key="frame" x="110" y="460" width="30" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="RRV-Gc-BsH"/>
                                                         <constraint firstAttribute="height" constant="20" id="q2L-uI-zAq"/>
@@ -329,55 +328,48 @@
                                                     <state key="normal" image="text.bubble" catalog="system"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yng-yy-g9X">
-                                                    <rect key="frame" x="170" y="959" width="20" height="20"/>
+                                                    <rect key="frame" x="170" y="459" width="20" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="20" id="bSa-LU-FMt"/>
                                                         <constraint firstAttribute="height" constant="20" id="fIc-EK-bJ9"/>
                                                     </constraints>
                                                     <state key="normal" image="arrowshape.turn.up.right" catalog="system"/>
                                                 </button>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uhh-TW-k8n">
-                                                    <rect key="frame" x="7" y="110.5" width="400" height="348.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V3Q-VU-jL8">
+                                                    <rect key="frame" x="20" y="90" width="374" height="359"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="400" id="kqO-UA-I85"/>
+                                                        <constraint firstAttribute="height" constant="375" id="bhK-Wg-Wgh"/>
+                                                        <constraint firstAttribute="width" constant="374" id="iV2-sh-mZp"/>
                                                     </constraints>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="94F-pP-kKq" customClass="TestView" customModule="VKapp" customModuleProvider="target">
-                                                    <rect key="frame" x="20" y="469" width="374" height="480"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="N2q-Xw-KAc" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leadingMargin" constant="10" id="4oo-Oz-Pwk"/>
                                                 <constraint firstItem="P4C-NC-edk" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leading" constant="10" id="6qf-Dk-xnp"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="94F-pP-kKq" secondAttribute="trailing" id="7N5-dd-uRe"/>
                                                 <constraint firstItem="Qos-GS-drq" firstAttribute="leading" secondItem="AzI-ik-2dM" secondAttribute="trailing" constant="10" id="Bkc-dI-ggU"/>
-                                                <constraint firstItem="yng-yy-g9X" firstAttribute="top" secondItem="94F-pP-kKq" secondAttribute="bottom" constant="10" id="BoA-VL-Bre"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="N2q-Xw-KAc" secondAttribute="bottom" constant="10" id="Ddy-fy-K3K"/>
                                                 <constraint firstItem="P4C-NC-edk" firstAttribute="top" secondItem="AzI-ik-2dM" secondAttribute="bottom" constant="20" id="GfH-90-Vwu"/>
                                                 <constraint firstAttribute="trailing" secondItem="P4C-NC-edk" secondAttribute="trailing" constant="10" id="Jaq-wK-Zn2"/>
-                                                <constraint firstItem="HuF-1x-dNj" firstAttribute="leading" secondItem="N2q-Xw-KAc" secondAttribute="trailing" constant="30" id="L7C-KT-bVD"/>
-                                                <constraint firstItem="Uhh-TW-k8n" firstAttribute="top" secondItem="P4C-NC-edk" secondAttribute="bottom" priority="999" constant="10" id="Lmc-yV-yDu"/>
+                                                <constraint firstItem="V3Q-VU-jL8" firstAttribute="centerX" secondItem="L07-A9-Pks" secondAttribute="centerX" id="N56-bb-KoR"/>
                                                 <constraint firstItem="Qos-GS-drq" firstAttribute="top" secondItem="L07-A9-Pks" secondAttribute="top" constant="10" id="RQj-LJ-oVt"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="yng-yy-g9X" secondAttribute="bottom" constant="10" id="ZRt-Sp-RHf"/>
+                                                <constraint firstItem="N2q-Xw-KAc" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leadingMargin" constant="10" id="T1C-yw-gCL"/>
+                                                <constraint firstItem="N2q-Xw-KAc" firstAttribute="top" secondItem="V3Q-VU-jL8" secondAttribute="bottom" constant="10" id="TjT-K5-ePh"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="HuF-1x-dNj" secondAttribute="bottom" constant="9" id="V5Q-AW-3wl"/>
                                                 <constraint firstItem="LzE-3n-iWL" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leading" constant="70" id="a1o-6W-vIw"/>
-                                                <constraint firstItem="yng-yy-g9X" firstAttribute="leading" secondItem="HuF-1x-dNj" secondAttribute="trailing" constant="30" id="bXD-j7-N9p"/>
                                                 <constraint firstItem="AzI-ik-2dM" firstAttribute="top" secondItem="L07-A9-Pks" secondAttribute="top" constant="10" id="d3S-3l-H7E"/>
-                                                <constraint firstItem="Uhh-TW-k8n" firstAttribute="centerX" secondItem="L07-A9-Pks" secondAttribute="centerX" id="dgL-eA-Raf"/>
-                                                <constraint firstAttribute="bottom" secondItem="HuF-1x-dNj" secondAttribute="bottom" constant="20" id="fDH-tp-TBX"/>
                                                 <constraint firstItem="LzE-3n-iWL" firstAttribute="top" secondItem="Qos-GS-drq" secondAttribute="bottom" constant="5" id="g54-Zz-zsu"/>
-                                                <constraint firstItem="94F-pP-kKq" firstAttribute="top" secondItem="Uhh-TW-k8n" secondAttribute="bottom" constant="10" id="gGi-gr-tZH"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="yng-yy-g9X" secondAttribute="bottom" constant="10" id="gNa-7D-opL"/>
                                                 <constraint firstItem="AzI-ik-2dM" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leading" constant="10" id="lZj-OB-IQt"/>
-                                                <constraint firstItem="94F-pP-kKq" firstAttribute="leading" secondItem="L07-A9-Pks" secondAttribute="leadingMargin" id="vBt-M2-yVX"/>
-                                                <constraint firstItem="N2q-Xw-KAc" firstAttribute="top" secondItem="Uhh-TW-k8n" secondAttribute="bottom" constant="500" id="wGh-Vu-B4a"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="N2q-Xw-KAc" secondAttribute="bottom" constant="10" id="yYA-J9-mL4"/>
+                                                <constraint firstItem="V3Q-VU-jL8" firstAttribute="top" secondItem="P4C-NC-edk" secondAttribute="bottom" constant="10" id="mY9-6Y-1XZ"/>
+                                                <constraint firstItem="yng-yy-g9X" firstAttribute="leading" secondItem="HuF-1x-dNj" secondAttribute="trailing" constant="30" id="vQw-MX-aod"/>
+                                                <constraint firstItem="HuF-1x-dNj" firstAttribute="leading" secondItem="N2q-Xw-KAc" secondAttribute="trailing" constant="30" id="w43-BZ-2j4"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imageHeight" destination="bhK-Wg-Wgh" id="uJn-Ly-dH3"/>
                                             <outlet property="newsDateLabel" destination="LzE-3n-iWL" id="BcV-s1-oV9"/>
-                                            <outlet property="newsImage" destination="Uhh-TW-k8n" id="enm-hb-p9F"/>
+                                            <outlet property="newsImage" destination="V3Q-VU-jL8" id="CO1-qV-cjf"/>
                                             <outlet property="newsSourseImage" destination="AzI-ik-2dM" id="7xs-cT-iaM"/>
                                             <outlet property="newsSourseLabel" destination="Qos-GS-drq" id="1Gc-Vq-wap"/>
-                                            <outlet property="newsTestView" destination="94F-pP-kKq" id="Q7R-Zc-IyT"/>
                                             <outlet property="newsTextLabel" destination="P4C-NC-edk" id="3wA-LZ-kTX"/>
                                         </connections>
                                     </tableViewCell>
@@ -401,7 +393,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HU5-iC-9c6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="819" y="2624"/>
+            <point key="canvasLocation" x="818.84057971014499" y="2623.6607142857142"/>
         </scene>
         <!--Friends-->
         <scene sceneID="1Zt-hZ-zkz">
@@ -585,21 +577,6 @@
                 <exit id="YOL-Pk-LrR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2502" y="1663"/>
-        </scene>
-        <!--Test View Controller-->
-        <scene sceneID="6Vm-rD-PN6">
-            <objects>
-                <viewController id="2yr-WD-NsZ" customClass="TestViewController" customModule="VKapp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="NhC-kU-fg5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="pVb-bU-V7I"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LfH-xN-AAm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5074" y="2494"/>
         </scene>
     </scenes>
     <resources>
